add update to weppage view

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,5 @@
 </form>
 
 
-<!-- <app-task-list [childTaskList]="masterTaskList" (clickSender)="editTask($event)"></app-task-list>
-<app-edit-task [childSelectedTask]="selectedTask" (doneButtonClickedSender)="finishedEditing()"></app-edit-task>
-<app-new-task (sendTask)="addTask($event)"></app-new-task> -->
+<app-section-list [childSectionList]="masterSectionList" (clickSender)="editSection($event)"></app-section-list>
+<app-edit-section [childSelectedSection]="selectedSection" (doneButtonClickedSender)="finishedEditing()"></app-edit-section>
