--- a/src/app/edit-section/edit-section.component.html
+++ b/src/app/edit-section/edit-section.component.html
@@ -1,11 +1,11 @@
 <div *ngIf="childSelectedSection">
   <h3>{{childSelectedSection.<title>Home</title>}}</h3>
-  <label>Enter Section Description:</label>
+  <label>Enter Section title:</label>
   <input [(ngModel)]="childSelectedSection.title">
-  <label>Enter Task Priority (1-3):</label>
+  <label>Enter articles (1-3):</label>
   <br>
   <input type="text" [(ngModel)]="childSelectedSection.article">1 <br>
-  <input type="text" [(ngModel)]="childSelectedSection.priority">2 <br>
-  <input type="text" [(ngModel)]="childSelectedSection.priority">3
+  <input type="text" [(ngModel)]="childSelectedSection.article">2 <br>
+  <input type="text" [(ngModel)]="childSelectedSection.article">3
   <button (click)="finishedEditing()">Done</button>
 </div>
