fix errors regarding section names

--- a/src/app/edit-section/edit-section.component.html
+++ b/src/app/edit-section/edit-section.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="childSelectedSection">
-  <h3>{{childSelectedSection.<title>Home</title>}}</h3>
-  <label>Enter Section title:</label>
-  <input [(ngModel)]="childSelectedSection.title">
+  <h3>{{childSelectedSection.name</h3>
+  <label>Enter Section name:</label>
+  <input [(ngModel)]="childSelectedSection.name">
   <label>Enter articles (1-3):</label>
   <br>
   <input type="text" [(ngModel)]="childSelectedSection.article">1 <br>
