--- a/src/app/section-list/section-list.component.html
+++ b/src/app/section-list/section-list.component.html
@@ -1,5 +1,5 @@
 <ul>
-  <li *ngFor="let currentSection of childSectionList">{{currentSection.title}}
+  <li *ngFor="let currentSection of childSectionList">{{currentSection.name}}
     <button (click)="editButtonClicked(currentTask)">Edit!</button>
   </li>
 </ul>
