--- a/src/app/edit-section/edit-section.component.html
+++ b/src/app/edit-section/edit-section.component.html
@@ -1,11 +1,15 @@
 <div *ngIf="childSelectedSection">
-  <h3>{{childSelectedSection.name</h3>
+  <h3>{{childSelectedSection.name}}</h3>
   <label>Enter Section name:</label>
   <input [(ngModel)]="childSelectedSection.name">
   <label>Enter articles (1-3):</label>
   <br>
-  <input type="text" [(ngModel)]="childSelectedSection.article">1 <br>
-  <input type="text" [(ngModel)]="childSelectedSection.article">2 <br>
-  <input type="text" [(ngModel)]="childSelectedSection.article">3
+  <div>
+    <h4>Articles: </h4>
+        <ul *ngFor="let currentArticle of childSelectedSection.article">
+          <li>{{currentArticle.title}}</li>
+          <p>{{currentArticle.description}}</p>
+
+        </ul>
   <button (click)="finishedEditing()">Done</button>
 </div>
