--- a/src/app/new-section/new-section.component.html
+++ b/src/app/new-section/new-section.component.html
@@ -1,3 +1,9 @@
-<p>
-  new-section works!
-</p>
+<h1>New Section</h1>
+<div>
+ <label>Enter Section Name:</label>
+ <input #newName>
+</div>
+<div>
+
+  <button (click)="submitForm(newName.value, newArticle.value); newName.value='';">Add</button>
+</div>
