add mock-articles.ts file

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,20 @@
-<div style="text-align:center">
-  <h1>{{currentFocus}}</h1>
-  <h3>Latest news and events for {{month}}/{{day}}/{{year}}</h3>
-  <h2>Welcome, {{userName}} to our {{ currentFocus }} website!</h2>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in tellus id risus laoreet placerat. Ut vulputate scelerisque leo, ac hendrerit lorem accumsan quis. Fusce vitae egestas diam. Proin metus lectus, viverra nec purus et, vestibulum suscipit urna. Morbi sagittis tempus nulla, vitae aliquet risus. Donec bibendum dolor ut sagittis dapibus. Cras ut nulla quis nisi faucibus egestas. Nulla facilisi. Nulla facilisi. Maecenas viverra tristique semper. Vivamus semper a nibh eget lacinia. Nulla posuere aliquam lorem, vel sollicitudin arcu euismod nec. Vestibulum vitae auctor nulla. Duis sit amet ligula at tellus ornare varius a non erat</p>
-</div>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" routerLink="">Home</a>
+    </div>
+    <ul class="nav navbar-nav navbar-right">
+      <li><a routerLink="about">About</a></li>
+      <li><a routerLink="Articles">Articles</a></li>
+    </ul>
+  </div>
+</nav>
 
-<form>
-  <label for="userName">Enter your name: </label>
-  <input [(ngModel)]="userName" type="text" name="user">
-</form>
+<router-outlet></router-outlet>
 
 
-<app-section-list [childSectionList]="masterSectionList" (clickSender)="editSection($event)"></app-section-list>
-<app-edit-section [childSelectedSection]="selectedSection" (doneButtonClickedSender)="finishedEditing()"></app-edit-section>
-<app-new-section (sendSection)="addSection($event)"></app-new-section>
+<footer class="footer">
+  <div class="container">
+    <a class="text-muted" routerLink="admin">Admin</a>
+  </div>
+</footer>
