--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,11 @@
   </div>
 </nav>
 
-<router-outlet></router-outlet>
+
+<div class="container">
+  <h1>{{title}}</h1>
+  <router-outlet></router-outlet>
+</div>
 
 <footer class="footer">
   <div class="container">
