add routing for listing news

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -25,7 +25,7 @@
       <div>
         <label>Article Date:</label>
         <br>
-        <textarea #newText></textarea>
+        <textarea #newDate></textarea>
       </div>
 
       <button (click)="submitForm(newTitle.value, newAuthor.value, newText.value, newDate.value); newTitle.value=''; newAuthor.value=''; newText.value=''; newDate.value=''">Add</button>
