--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
     </div>
     <ul class="nav navbar-nav navbar-right">
       <li><a routerLink="about">About</a></li>
-      <li><a routerLink="Articles">Articles</a></li>
+      <li><a routerLink="article-list">News</a></li>
     </ul>
   </div>
 </nav>
