--- a/src/app/article-detail/article-detail.component.html
+++ b/src/app/article-detail/article-detail.component.html
@@ -1,3 +1,5 @@
-<p>
-  article-detail works!
-</p>
+<div>
+  <h3>{{articleToDisplay?.title}}</h3>
+  <h4>{{articleToDisplay?.author}} in {{articleToDisplay?.date}}</h4>
+  <p>{{articleToDisplay?.text}}</p>
+</div>
