add stylings for footer

--- a/src/app/edit-article/edit-article.component.html
+++ b/src/app/edit-article/edit-article.component.html
@@ -5,7 +5,7 @@
 <br>
 
 <label>New Article Author:</label>
-<input [(ngModel)]="selectedAuthor.author">
+<input [(ngModel)]="selectedArticle.author">
 <br>
 
 <label>New Article Text:</label>
